@@ -276,6 +276,13 @@ if test x$have_xcursor = xyes; then
   AC_DEFINE(HAVE_XCURSOR, [1], [Use XCursor to sync pointer themes])
 fi
 
+AC_C_BIGENDIAN
+if test "x$ac_cv_c_bigendian" = "xyes"; then
+	CPPFLAGS="$CPPFLAGS -DBYTE_ORDER=BIG_ENDIAN"
+else
+	CPPFLAGS="$CPPFLAGS -DBYTE_ORDER=LITTLE_ENDIAN"
+fi
+
 MBWM_INCS='-I$(top_srcdir) -I$(top_srcdir)/matchbox/core -I$(top_srcdir)/matchbox/client-types -I$(top_srcdir)/matchbox/theme-engines -I$(top_srcdir)/matchbox/comp-mgr -I$(top_builddir)'
 MBWM_CORE_LIB='$(top_builddir)/matchbox/core/libmatchbox-window-manager-2-core.a'
 MBWM_CLIENT_BUILDDIR='$(top_builddir)/matchbox/client-types'
