@@ -1,3 +1,9 @@
+2009-01-18  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+	* configure.ac: determine endianness
+	* matchbox/theme-engines/mb-wm-theme-png.c: PNG RGB values should
+	  be swapped on little-endian machines (e.g. the Intel scratchbox)
+
 2009-01-15  Thomas Thurman  <thomas.thurman@collabora.co.uk>
 
 	* matchbox/core/mb-wm-client-base.c: remove irrelevant stacking
